# gemini-spec-driven-dev-template

./: CHANGELOG.md  CHANGELOG_zh-TW.md  GEMINI.md  GEMINI_zh-TW.md  README.md  README.zh-TW.md  README_zh-TW.md
.gemini/: settings.json
.gemini/commands/: spec-design.md  spec-design.toml  spec-init.md  spec-init.toml  spec-requirements.md  spec-status.md  spec-status.toml  spec-tasks.md  spec-tasks.toml  steering-custom.md  steering.md  steering.toml
.gemini/commands/spec/: design.toml  init.toml  requirements.toml  spec-design.toml  spec-requirements.toml  status.toml  steering-custom.toml  steering.toml  tasks.toml
.gemini/scripts/: calculate_progress.py
.kiro/: config.json
.kiro/steering/: product.md  structure.md  tech.md
docs/: architecture.md  architecture.zh-TW.md  index.md  index.zh-TW.md  usage.md  usage.zh-TW.md
docs/kiro/specs-example/blog-post-generator/: README.md  design.md  requirements.md  spec.json
example/: README.md
example/blog-post-generator/: pyproject.toml
example/blog-post-generator/.gemini/commands/spec/: init.toml  run-tasks.toml  steering.toml  tasks.toml
example/blog-post-generator/.kiro/specs/blog-post-generator/: tasks.md
example/blog-post-generator/src/: file_manager.py  main.py  markdown_generator.py
example/blog-post-generator/tests/: test_e2e.py  test_main.py
samples/blog-post-generator/: README.md
samples/blog-post-generator/posts/: my-test-post.md
samples/blog-post-generator/tests/: test_file_manager.py  test_markdown_generator.py
